--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,8 +1,10 @@
 {
   "extends": ["next/core-web-vitals"],
   "rules": {
-    "prefer-const": "error",
-    "no-unused-vars": "warn",
-    "@typescript-eslint/no-unused-vars": "warn"
+    "prefer-const": "off",
+    "no-unused-vars": "off",
+    "react/no-unescaped-entities": "off",
+    "react/jsx-no-comment-textnodes": "off",
+    "@next/next/no-page-custom-font": "off"
   }
 }
