Update vercel.json with correct backend URL

--- a/vercel.json
+++ b/vercel.json
@@ -14,11 +14,11 @@
     }
   ],
   "env": {
-    "NEXT_PUBLIC_API_URL": "https://ghostframe-backend.onrender.com"
+    "NEXT_PUBLIC_API_URL": "https://ghostframe-backend-nepi.onrender.com"
   },
   "build": {
     "env": {
-      "NEXT_PUBLIC_API_URL": "https://ghostframe-backend.onrender.com"
+      "NEXT_PUBLIC_API_URL": "https://ghostframe-backend-nepi.onrender.com"
     }
   }
 }
